# be-answer-hub

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml  run-migrations.sh
app/: main.py  routes.py
app/api/: base.py  cv.py  hiring.py  nodes.py
app/clients/: __init__.py  minio.py
app/core/: constants.py  exceptions_handler.py  logging.py  settings.py
app/database/: db.py  session.py
app/database/migrations/: alembic.ini  env.py
app/database/migrations/versions/: 20250617_0001_create_nodes_table.py  20250618_0002_create_cv_table.py  20250624_0003_create_hiring_tables.py
app/dependencies/: clients.py  repositories.py  services.py
app/exceptions/: __init__.py  base.py  cv.py  hiring.py  node.py
app/models/: __init__.py  base.py  cv.py  hiring.py  node.py
app/repositories/: __init__.py  cv_repository.py  hiring_repository.py  node_repository.py
app/schemas/: __init__.py
app/schemas/requests/: cv.py  hiring.py  node.py
app/schemas/responses/: __init__.py  cv.py  hiring.py  node.py
app/services/: __init__.py  cv_service.py  node_service.py
app/services/hiring_service/: __init__.py  helpers.py  hiring_service.py
app/services/node_service/: __init__.py  helpers.py  node_service.py
app/utils/: __init__.py  content_disposition.py  hiring.py  node_tree.py
scripts/: minio-entrypoint.sh
scripts/postgres/: init-test-db.sql
tests/: conftest.py  factories.py
tests/api/: test_cv.py  test_health.py  test_hiring.py  test_nodes.py
