[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "be-answer-hub"
version = "0.1.0"
description = "FastAPI backend application with clean architecture"
authors = [
    "Your Name <your.email@company.com>",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.10.1"
greenlet = "^3.2.4"
httpx = "^0.27.0"
uvloop = "^0.21.0"
ujson = "^5.10.0"
cryptography = "^41.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.14.9"
pre-commit = "^4.3.0"
mypy = "^1.17.1"
types-ujson = "^5.10.0.20250822"
types-requests = "^2.32.4.20250809"
factory-boy = "^3.3.0"
aiosqlite = "^0.21.0"
pytest-httpx = "^0.30.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
